--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ wtforms==2.2.1
 flask==1.1.1
 flask-login==0.5.0
 flask-wtf==0.14.3
-Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
+sqlalchemy-serializer==1.3.4.2
