--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 sqlalchemy==1.3.5
 sqlalchemy-mixins==1.2.1
+sqlalchemy-json==0.4.0
+sqlalchemy-serializer==1.3.4.2
 wtforms==2.2.1
 flask==1.1.1
 flask-login==0.5.0
 flask-wtf==0.14.3
 Flask-RESTful==0.3.8
-sqlalchemy-serializer==1.3.4.2
 alembic==1.4.2
-sqlalchemy-json==0.4.0
+manage.py==0.2.10
