--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,29 @@
-sqlalchemy==1.3.5
-sqlalchemy-mixins==1.2.1
-sqlalchemy-json==0.4.0
-sqlalchemy-serializer==1.3.4.2
-wtforms==2.2.1
-flask==1.1.1
-flask-login==0.5.0
-flask-wtf==0.14.3
-Flask-RESTful==0.3.8
 alembic==1.4.2
+aniso8601==8.0.0
+blinker==1.4
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.1
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-RESTful==0.3.8
+Flask-WTF==0.14.3
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.11.1
+Mako==1.1.3
 manage.py==0.2.10
-jinja2==2.11.1
+MarkupSafe==1.1.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2020.1
 requests==2.22.0
+six==1.15.0
+SQLAlchemy==1.3.5
+sqlalchemy-json==0.4.0
+sqlalchemy-mixins==1.2.1
+SQLAlchemy-serializer==1.3.4.2
+urllib3==1.25.9
+Werkzeug==1.0.1
+WTForms==2.2.1
