--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ Jinja2==2.11.1
 Mako==1.1.3
 manage.py==0.2.10
 MarkupSafe==1.1.1
+mysqlclient==2.0.2
+psycopg2==2.8.6
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.1
@@ -25,6 +27,6 @@ sqlalchemy-json==0.4.0
 sqlalchemy-mixins==1.2.1
 SQLAlchemy-serializer==1.3.4.2
 urllib3==1.25.9
+vk-api==11.8.0
 Werkzeug==1.0.1
 WTForms==2.2.1
-vk-api==11.8.0
