--- a/package.json
+++ b/package.json
@@ -1,19 +1,41 @@
 {
   "requires": true,
   "lockfileVersion": 1,
+  "name": "matboy",
+  "description": "MatBoy ====== ## Содержание",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js --watch"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/i3Cheese/MatBoy.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/i3Cheese/MatBoy/issues"
+  },
+  "homepage": "https://github.com/i3Cheese/MatBoy#readme",
   "dependencies": {
-    "air-datepicker": {
-      "version": "2.2.3",
-      "resolved": "https://registry.npmjs.org/air-datepicker/-/air-datepicker-2.2.3.tgz",
-      "integrity": "sha1-nbtrxryMnZ2zgEdQkTcNrYLC94c=",
-      "requires": {
-        "jquery": ">=2.0.0 <4.0.0"
-      }
-    },
-    "jquery": {
-      "version": "3.4.1",
-      "resolved": "https://registry.npmjs.org/jquery/-/jquery-3.4.1.tgz",
-      "integrity": "sha512-36+AdBzCL+y6qjw5Tx7HgzeGCzC81MDDgaUP8ld2zhx58HdqXGoBd+tHdrBMiyjGQs0Hxs/MLZTu/eHNJJuWPw=="
-    }
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^10.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "typescript": "^4.3.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-react": "^7.12.1",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2"
   }
 }
