--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.0.0",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2"
   }
