--- a/package.json
+++ b/package.json
@@ -21,14 +21,27 @@
   },
   "homepage": "https://github.com/i3Cheese/MatBoy#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
+    "@types/history": "^4.7.8",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router": "^5.1.15",
+    "@types/react-router-dom": "^5.1.7",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^10.0.0",
+    "bootstrap": "4.6",
+    "history": "^4.10.1",
+    "immer": "^9.0.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
     "terser-webpack-plugin": "^5.1.4"
   },
   "devDependencies": {
