--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "name": "matboy",
   "description": "MatBoy ====== ## Содержание",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js --watch"
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -49,13 +50,17 @@
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
     "node-sass": "^6.0.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2"
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
