--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "terser-webpack-plugin": "^5.1.4"
   },
