--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^10.0.0",
     "bootstrap": "^5.0.2",
+    "date-fns": "^2.23.0",
     "history": "^4.10.1",
     "immer": "^9.0.3",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.3",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.1",
     "react-loader-spinner": "^4.0.0",
@@ -57,6 +59,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-react": "^7.12.1",
+    "@types/react-datepicker": "^4.1.4",
     "@types/yup": "^0.29.13",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
