--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ python-editor==1.0.4
 pytz==2020.1
 requests==2.22.0
 six==1.15.0
-SQLAlchemy==1.3.5
+SQLAlchemy~=1.4.23
 mysqlclient==2.0.2
 psycopg2==2.8.6
 sqlalchemy-json==0.4.0
