--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask==1.1.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-RESTful==0.3.8
+marshmallow~=3.13.0
 Flask-WTF==0.14.3
 WTForms==2.2.1
 wtforms_json==0.3.3
