--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "outDir": "./static/",
     "noImplicitAny": true,
     "downlevelIteration": true,
-    "typeRoots": [ "./types", "./node_modules/@types"]
+    "typeRoots": [ "./src/@types", "./node_modules/@types"]
   }
 }
