--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ pytz==2020.1
 requests==2.22.0
 six==1.15.0
 SQLAlchemy~=1.4.23
-psycopg2==2.8.6
+psycopg2~=2.9.2
 sqlalchemy-json==0.4.0
 sqlalchemy-mixins==1.2.1
 SQLAlchemy-serializer==1.3.4.2
